Spacing fixes from Mackay's QA

--- a/modules/blog/post-snippet/post-snippet.module.scss
+++ b/modules/blog/post-snippet/post-snippet.module.scss
@@ -114,7 +114,7 @@ $gap-mobile-version: 1rem;
 }
 
 .imageMedium {
-  margin: 7rem 0;
+  margin: 6rem 0;
 
   @include breakpoint(small) {
     margin: 0;
