--- a/modules/blog/posts-list/posts-list.module.scss
+++ b/modules/blog/posts-list/posts-list.module.scss
@@ -5,7 +5,7 @@
   display: grid;
   column-gap: 1.5rem;
   row-gap: 0.75rem;
-  grid-template-columns: 24rem 39rem 10rem;
+  grid-template-columns: 24rem 1fr 11rem;
   grid-template-areas:
     'category category category'
     'title description authorWrapper';
@@ -105,7 +105,7 @@
 
 .date {
   color: $color-grey-500;
-  margin-top: 0;
+  margin: 0;
 }
 
 .container:nth-of-type(1) {
@@ -116,7 +116,7 @@
     opacity: 0.15;
     position: absolute;
     top: 0;
-    width: 100%;
+    width: calc(100% - 4rem);
     z-index: 1;
   }
 
@@ -136,7 +136,7 @@
   opacity: 0.15;
   position: absolute;
   top: 100%;
-  width: 100%;
+  width: calc(100% - 4rem);
   z-index: 1;
 
   @include breakpoint(small) {
