--- a/pages/blog.module.scss
+++ b/pages/blog.module.scss
@@ -4,10 +4,9 @@
 .featuredOuter {
   background: $color-dark;
   color: $color-font;
-  margin-top: $header-height;
 
   @include breakpoint(medium-up) {
-    margin: 0 -3.5rem;
+    margin: $header-height -3.5rem 0;
     padding: 7.25rem 3.5rem;
   }
 
@@ -46,7 +45,7 @@
   @include display-xs;
 
   font-weight: 500;
-  margin: 0 1.5rem;
+  margin: 0 2rem 1rem;
 
   @include breakpoint(small) {
     margin: 0 0 1.5rem;
@@ -55,7 +54,7 @@
 
 .allBlogPostsInner {
   .secondaryTitle {
-    margin: 0 1.5rem 2rem;
+    margin: 0 2rem 2rem;
 
     @include breakpoint(small) {
       margin: 0 0 0.75rem;
